<resources>
    <string name="app_name">tryToDoSomething</string>
    <string name="button1">Button1</string>
    <string name="textview1">Дефолтный текст</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="settings">Settings</string>
    <string name="menuItem">menu item</string>
    <string name="contextItem">context item</string>
    <string name="textSize">Text size</string>
    <string name="textColor">Text color</string>
    <string name="colorRed">Red</string>
    <string name="colorBlue">Blue</string>
    <string name="colorGreen">Green</string>
    <string name="textSize22">22</string>
    <string name="textSize27">27</string>
    <string name="textSize32">32</string>

</resources>
